--- a/docs/面试准备.md
+++ b/docs/面试准备.md
@@ -404,11 +404,114 @@ sysUserMapper.selectOne(queryWrapper);
 
 
 
+**1.编写拦截器**
+
+**拦截器思路**
+
+实现HandlerInterceptor接口
+
+重写preHandle方法
+
+```java
+
+/**
+         * 1. 需要判断 请求的接口路径 是否为 HandlerMethod (controller方法)
+         （因为还存在静态资源，不是方法，可能是一些网页啥的，需要将这些过滤掉）
+         * 2. 判断 token是否为空，如果为空 未登录，进行拦截
+         * 3. 如果token 不为空，验证token， loginService.checkToken
+         * 4. 如果认证成功 放行
+         */
+```
+
+>   注意：
+>
+>   -   因为如果失败了，需要给网页返回信息
+>
+>       就要设置格式
+>
+>       前后端分离，格式为json
+>
+>       ```java
+>       response.setContentType("application/json;charset=utf-8");
+>                   response.getWriter().print(JSON.toJSONString(result));
+>       ```
+>
+>       
+
+2.**设置需要拦截的窗口（页面）**
+
+实现WebMvcConfigurer接口
+
+重写addInterceptors方法
+
+```java
+@Configuration
+public class WebMVCConfig implements WebMvcConfigurer {
+
+    @Autowired
+    private LoginInterceptor loginInterceptor;
+
+    @Override
+    public void addCorsMappings(CorsRegistry registry) {
+        //跨域配置
+        registry.addMapping("/**").allowedOrigins("http://localhost:8080");
+    }
+
+    @Override
+    public void addInterceptors(InterceptorRegistry registry) {
+    //假设拦截test接口后续实际遇到拦截的接口时，再配置真正的拦截接口
+        registry.addInterceptor(loginInterceptor)
+                .addPathPatterns("/test");
+    }
+}
+
+```
+
+
+
+3.**写一个需要被拦截的窗口**
+
+```java
+@RestController
+@RequestMapping("test")
+public class TestController {
+
+    @RequestMapping
+    public Result test(){
+        return Result.success(null);
+    }
+}
+```
+
+
+
+
+
+**注意：**
+
 ##### 保存用户信息
 
-由于每次请求资源都需要token验证，很麻烦，
+由于每次请求资源都需要token验证，很麻烦，我们验证完，就可以将得到用户的信息进行保存，同时也不需要频繁的传递token
 
 可以利用threadLocal保存用户信息，以便controller层直接获取
+
+
+
+**思路：**
+
+1.   写一个UserThreadLocal的类
+
+     >   定义成员变量，需要定义为private static final类型
+     >
+     >   定义put,set,remove的static 方法
+
+2.    在LoginInterceptor类中，将验证过的用户信息，put进来
+
+3.   在需要使用用户信息的controller中进行get
+
+     >   可以参考文章的publish方法
+
+
 
 
 
